--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Clothing Store | Shop & Cart</title>
     <link rel='stylesheet' href='/stylesheets/shop & cart.css' />
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <title>Clothing Store</title>
   </head>
   <body>
     <!--Header-->
