--- a/views/user/itemList.hbs
+++ b/views/user/itemList.hbs
@@ -1,3 +1,4 @@
+<link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <link rel="stylesheet" href="/public/css/user/itemList.css" />
 
 <h2 class="section-title">Shop Products</h2>
